# python-po-lint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/po_lint/: __init__.py  checks.py  cli.py  config.py  detector.py  linter.py
tests/: test_checks.py  test_cli.py  test_config.py  test_detector.py  test_linter.py
tests/fixtures/locale/: .po-lint-ignore
tests/fixtures/locale/ar/LC_MESSAGES/: django.po
tests/fixtures/locale/da/LC_MESSAGES/: django.po
tests/fixtures/locale/fr/LC_MESSAGES/: django.po
tests/fixtures/locale/nl/LC_MESSAGES/: django.po
tests/fixtures/locale/ru/LC_MESSAGES/: django.po
